flickering temporary fix bookmark button

--- a/packages/fakeyou.com/src/components/common/BookmarkButton/BookmarkButton.scss
+++ b/packages/fakeyou.com/src/components/common/BookmarkButton/BookmarkButton.scss
@@ -88,7 +88,6 @@
 
   .favorite-text-wrapper {
     position: relative;
-    display: flex;
   }
 
   span {
